<resources>
    <string name="app_name">ReciclaIA</string>
    <string name="recicla_ia" translatable="false">Recicla-IA</string>
    <string name="key_colors">Colores clave</string>
    <string name="test_api">Test API</string>
    <string name="start_app">Iniciar app</string>
    <string name="do_not_show_tutorial_again">No volver a mostrar tutorial</string>
    <string name="key_colors_explanation">Estos son los colores generados a partir del fondo de pantalla del usuario</string>
    <string name="view_based_app">Versión View</string>
    <string name="compose_based_app">Versión Compose</string>
    <string name="home">Inicio</string>
    <string name="history">Historial</string>
    <string name="learn">Aprende</string>
    <string name="profile">Perfil</string>
    <string name="settings">Ajustes</string>
    <string name="image_for_the_item_option">Imagen para el elemento de las opciones</string>
    <string name="app_info">Información de la aplicación</string>
    <string name="version">Versión</string>
    <string name="app_configuration">Configuración de la aplicación</string>
    <string name="ia_configuration">Configuración Deep Learning</string>
    <string name="should_show_tutorial">Tutorial al inicio</string>
    <string name="app_theme">Tema</string>
    <string name="system">Sistema</string>
    <string name="startup_tutorial">Lanzar tutorial</string>
    <string name="dark">Oscuro</string>
    <string name="light">Claro</string>
    <string name="start_tutorial">Ver tutorial</string>
    <string name="start_settings">Al iniciar</string>
    <string name="startup_compose">Versión compose</string>
    <string name="dl_configuration">Procesado inferencia modelo</string>
    <string name="remote">Remoto</string>
    <string name="local">Local</string>
    <string name="contact_us">¡Contáctanos!</string>
    <string name="terms_and_conditions">Términos y condiciones</string>
    <string name="privacy_policy">Política de privacidad</string>
    <string name="rate_us">¡Valóranos!</string>
    <string name="adds_a_new_image_to_the_library" translatable="false">Añade una nueva imagen a la biblioteca</string>
    <string name="select_image_source">Selecciona origen de la imagen</string>
    <string name="camera">cámara</string>
    <string name="gallery">galería</string>
    <string name="title_activity_image_visor" translatable="false">ImageVisor</string>
    <string name="rotate_cw" translatable="false">rotate cw</string>
    <string name="rotate_ccw" translatable="false">Rotate ccw</string>
    <string name="icon_for_success_dialog" translatable="false">icon_for_success_dialog</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancelar</string>
    <string name="confirm_action">Confirmar acción</string>
    <string name="want_saving">¿Quieres guardar los datos actuales?</string>
    <string name="cancelled">Cancelado...</string>
    <string name="back_icon" translatable="false">back_icon</string>
    <string name="saves_image" translatable="false">saves_image</string>
    <string name="want_sharing_to_local_media">¿Quieres guardar la imagen en la galería?</string>
    <string name="saved_successfully">¡Guardado con éxito!</string>
    <string name="error_with_the_image_processing">Ha habido un error procesando la imagen...</string>
    <string name="ai_visor">Visor IA</string>
    <string name="enable_location_in_captions">Permitir opción de incluir localización en capturas</string>
    <string name="enable_location_in_new_captions_title">Incluir ubicación en capturas</string>
    <string name="request_location_permission">Permiso ubicación</string>
    <string name="permission_denied_check_app_settings">Permiso denegado, habilítalo en los ajustes de la app.</string>
    <string name="scan">Procesar</string>
    <string name="exported_successfully">Imagen guardada en galería</string>
    <string name="error_with_the_image_saving">Error guardando la imagen...</string>
    <string name="data_saved">Datos guardados</string>
    <string name="title_of_capture">Título de la captura</string>
    <string name="name_the_capture">Nombra tu captura</string>
    <string name="title">Título</string>
    <string name="description">Descripción</string>
    <string name="process">Procesar</string>
    <string name="save_data">Guardar datos captura</string>
    <string name="save_image">Guardar imagen en galería</string>
    <string name="classification_result">Resultado de la clasificación</string>
    <string name="preditions">Predicciones</string>
    <string name="classification_information">Información de la clasificación</string>
    <string name="model_info">Info del modelo</string>
    <string name="location">Ubicación</string>
    <string name="location_icon" translatable="false">location_icon</string>
    <string name="datetime">Fecha y hora</string>
    <string name="not_classified_yet">¡No hay resultado de clasificación\n pulsa en procesar!</string>
    <string name="no_camera_permission_granted">No has autorizado el uso de la cámara, ve a los ajustes para establecerlo.</string>
    <string name="organic_container" translatable="true">Contenedor marrón o gris</string>
    <string name="yellow_container" translatable="true">Contenedor amarillo</string>
    <string name="blue_container" translatable="true">Contenedor verde</string>
    <string name="textile_container" translatable="true">Contenedor textil</string>
    <string name="sigre_point" translatable="true">Punto sigre</string>
    <string name="rest_container" translatable="true">Contenedor restos</string>
    <string name="clean_point" translatable="true">Punto limpio</string>
    <string name="specific_management" translatable="true">Procesado específico</string>
    <string name="special_recycling" translatable="true">reciclaje especial</string>
    <string name="municipal_services_special_containers" translatable="true">Servicios municipales, contenedores especiales</string>
    <string name="no_results" translatable="true">No hay información de reciclaje</string>
    <string name="organic" translatable="true">Orgánico</string>
    <string name="food" translatable="true">Comida</string>
    <string name="food_waste" translatable="true">Restos de comida</string>
    <string name="coffee_grounds" translatable="true">Posos de café</string>
    <string name="eggshells" translatable="true">Cáscaras de huevo</string>
    <string name="aerosol_cans" translatable="true">Latas de aerosol</string>
    <string name="styrofoam_food_containers" translatable="true">Envases de comida de poliestireno</string>
    <string name="disposable_plastic_cutlery" translatable="true">Cubertería de plástico desechable</string>
    <string name="tea_bags" translatable="true">Bolsa de té</string>
    <string name="aluminium_food_cans" translatable="true">Envases de aluminio</string>
    <string name="aluminium_soda_cans" translatable="true">Refrescos de aluminio</string>
    <string name="plastic_soda_bottles" translatable="true">Botellas de plástico</string>
    <string name="can" translatable="true">Lata</string>
    <string name="plastic_cup_lids" translatable="true">Tapas de vasos de plástico</string>
    <string name="plastic_detergent_bottles" translatable="true">Botellas de detergente de plástico</string>
    <string name="plastic_food_containers" translatable="true">Envases de plástico</string>
    <string name="plastic_shopping_bags" translatable="true">Bolsas de plástico</string>
    <string name="plastic_straws" translatable="true">Pajitas de plástico</string>
    <string name="plastic_trash_bags" translatable="true">Bolsas de basura (plástico)</string>
    <string name="plastic_water_bottles" translatable="true">Botellas de agua de plástico</string>
    <string name="steel_food_cans" translatable="true">Latas de comida de acero</string>
    <string name="paper" translatable="true">Papel</string>
    <string name="cardboard" translatable="true">Cartón</string>
    <string name="cardboard_boxes" translatable="true">Caja de cartón</string>
    <string name="cardboard_packaging" translatable="true">Embalaje de cartón</string>
    <string name="magazines" translatable="true">Revistas</string>
    <string name="newspaper" translatable="true">Periódico</string>
    <string name="office_paper" translatable="true">Papel de oficina</string>
    <string name="paper_cups" translatable="true">Vasos de papel</string>
    <string name="glass" translatable="true">Vidrio</string>
    <string name="glass_beverage_bottles" translatable="true">Botellas de vidrio de bebidas</string>
    <string name="glass_cosmetics_containers" translatable="true">Envases de cosméticos de vidrio</string>
    <string name="glass_food_jars" translatable="true">Frascos de vidrio para alimentos</string>
    <string name="oil" translatable="true">Aceite</string>
    <string name="electronics" translatable="true">Dispositivo electrónico</string>
    <string name="textil" translatable="true">Textil</string>
    <string name="clothing" translatable="true">Ropa</string>
    <string name="shoes" translatable="true">Zapatos</string>
    <string name="medicine" translatable="true">Medicamento</string>
    <string name="miscellaneous" translatable="true">Diverso</string>
    <string name="enum_not_classified_yet" translatable="true">Sin clasificar aún</string>
    <string name="enum_no_results" translatable="true">Sin resultados</string>
    <string name="enum_classified_not_saved" translatable="true">Clasificado no guardado</string>
    <string name="enum_classified_saved" translatable="true">Clasificado y guardado</string>
    <string name="enum_saved_not_classified" translatable="true">Guardado pero no clasificado</string>
    <string name="image_for_processing" translatable="true">Imagen para indicar el tipo de procesado</string>
    <string name="filter" translatable="true">Filtro</string>
    <string name="sort" translatable="true">sort</string>
    <string name="want_delete_all">¿Deseas borrar TODOS los elementos?</string>
    <string name="pattern_deleted_n_items">%s items borrados</string>
    <string name="no_results_yet">No hay capturas aún, pulsa en el botón \"+\" de la barra inferior para añadir tu primera captura.</string>
    <string name="processing_info">Procesado del residuo</string>
    <string name="pattern_prediction_and_processing">%s (%.2f). Se procesa en %s</string>
    <string name="select_order_criteria">Selecciona criterio de ordenación</string>
    <string name="none">Ninguno</string>
    <string name="by_tag">Por etiqueta</string>
    <string name="by_timestamp">Por fecha</string>
    <string name="by_processing">Por modo de procesado</string>
    <string name="desc">¿Orden descendente?</string>
    <string name="unchanged">Sin cambios</string>
    <string name="by_accuracy">Por precisión</string>
    <string name="waste_information">Información procesado del residuo</string>
</resources>