<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <View
        android:id="@+id/bottom_dialog_handle"
        android:layout_width="32dp"
        android:layout_height="4dp"
        android:backgroundTint="?attr/colorSecondary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:background="@drawable/divider_rounded"
        />
    <TextView
        android:id="@+id/tv_select_order_criteria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/bottom_dialog_handle"
        android:text="@string/select_order_criteria"
        style="@style/TextAppearance.AppCompat.Menu"
        android:textAlignment="center"
        android:padding="16dp"
        />
    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/margin_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_select_order_criteria">

        <RadioButton
            android:id="@+id/radio_timestamp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:text="@string/by_timestamp"
            android:textSize="11sp" />

        <RadioButton
            android:id="@+id/radio_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/by_tag"
            android:textSize="11sp" />
        <RadioButton
            android:id="@+id/radio_accuracy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/by_accuracy"
            android:textSize="11sp" />
        <RadioButton
            android:id="@+id/radio_none"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unchanged"
            android:textSize="11sp" />
    </RadioGroup>
    <CheckBox
        android:id="@+id/checkbox_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/desc"
        android:textSize="11sp"
        android:layout_marginStart="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radio_group" />

</androidx.constraintlayout.widget.ConstraintLayout>