<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface">
    <include
        android:id="@+id/title"
        layout="@layout/screen_title"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_title_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="16sp"
                android:text="@string/app_configuration"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="72dp"
                android:paddingHorizontal="@dimen/margin_1"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_app_config"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_1"
                android:padding="@dimen/margin_1"
                app:layout_constraintTop_toBottomOf="@id/tv_title_settings"
                app:cardElevation="0dp"
                app:cardBackgroundColor="?attr/colorSurfaceVariant"
                app:cardCornerRadius="@dimen/margin_1">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/margin_1">
                    <androidx.constraintlayout.widget.Guideline
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/guideline_vertical"
                        android:orientation="vertical"
                        app:layout_constraintGuide_percent="0.5"/>
                    <View
                        android:id="@+id/view_separator"
                        android:layout_width="1sp"
                        android:layout_height="0dp"
                        app:layout_constraintStart_toStartOf="@id/guideline_vertical"
                        app:layout_constraintEnd_toEndOf="@id/guideline_vertical"
                        android:background="?attr/colorPrimary"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"/>
                    <TextView
                        android:id="@+id/tv_skip_tutorial_title"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/guideline_vertical"
                        app:layout_constraintTop_toTopOf="parent"
                        android:text="@string/start_settings"
                        android:textAlignment="center"/>
                    <CheckBox
                        android:id="@+id/checkbox_tutorial"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/tv_skip_tutorial_title"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/guideline_vertical"
                        android:text="@string/startup_tutorial"
                        android:textSize="11sp"
                        />
                    <CheckBox
                        android:id="@+id/checkbox_compose"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/checkbox_tutorial"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/guideline_vertical"
                        android:text="@string/startup_compose"
                        android:textSize="11sp"
                        />
                    <Button
                        android:id="@+id/bt_start_tutorial"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/checkbox_compose"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="@id/guideline_vertical"
                        android:layout_marginEnd="@dimen/margin_1"
                        android:text="@string/start_tutorial"
                        android:textSize="11sp"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:textColor="?attr/colorPrimary"
                        />
                    <TextView
                        android:id="@+id/tv_theme_title"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/guideline_vertical"
                        app:layout_constraintTop_toTopOf="parent"
                        android:text="@string/app_theme"
                        android:textAlignment="center"/>
                    <RadioGroup
                        android:id="@+id/radio_group"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/tv_theme_title"
                        app:layout_constraintStart_toEndOf="@id/guideline_vertical"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:paddingStart="@dimen/margin_1">

                        <RadioButton
                            android:id="@+id/radio_system"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/system"
                            android:textSize="11sp" />
                        <RadioButton
                            android:id="@+id/radio_light"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/light"
                            android:textSize="11sp"
                            android:layout_margin="0dp" />
                        <RadioButton
                            android:id="@+id/radio_dark"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/dark"
                            android:textSize="11sp"/>
                    </RadioGroup>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_title_ia_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="16sp"
                android:text="@string/ia_configuration"
                app:layout_constraintTop_toBottomOf="@id/cv_app_config"
                android:layout_marginTop="@dimen/margin_2"
                android:paddingHorizontal="@dimen/margin_1"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_dl_config"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_1"
                android:padding="@dimen/margin_1"
                app:layout_constraintTop_toBottomOf="@id/tv_title_ia_settings"
                app:cardElevation="0dp"
                app:cardBackgroundColor="?attr/colorSurfaceVariant"
                app:cardCornerRadius="@dimen/margin_1">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/margin_1">
                    <TextView
                        android:id="@+id/tv_ia_config_title"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:text="@string/dl_configuration"
                        android:textAlignment="center"/>
                    <RadioGroup
                        android:id="@+id/radio_group_dl"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/tv_ia_config_title"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:paddingStart="@dimen/margin_1"
                        android:orientation="horizontal"
                        android:gravity="center">

                        <RadioButton
                            android:id="@+id/radio_local"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/local"
                            android:textSize="11sp" />
                        <RadioButton
                            android:id="@+id/radio_remote"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/remote"
                            android:textSize="11sp" />
                    </RadioGroup>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_title_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="16sp"
                android:text="@string/app_info"
                app:layout_constraintTop_toBottomOf="@id/cv_dl_config"
                android:layout_marginTop="@dimen/margin_2"
                android:paddingHorizontal="@dimen/margin_1"/>
            <com.ingencode.reciclaia.ui.components.InfoIconTextView
                android:id="@+id/app_version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_1"
                app:layout_constraintTop_toBottomOf="@id/tv_title_info"
                app:iconSrcId="@drawable/rounded_numbers_24"
                android:backgroundTint="?attr/colorPrimary"
                app:label="@string/version"
                app:isSeparatorVisible="true"
                android:foreground="?attr/selectableItemBackground"
                android:paddingHorizontal="@dimen/margin_1"
                />
            <com.ingencode.reciclaia.ui.components.InfoIconTextView
                android:id="@+id/contact_us"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_1"
                app:layout_constraintTop_toBottomOf="@id/app_version"
                app:iconSrcId="@drawable/round_key_24"
                android:backgroundTint="?attr/colorPrimary"
                app:label="@string/contact_us"
                app:isSeparatorVisible="true"
                android:foreground="?attr/selectableItemBackground"
                android:paddingHorizontal="@dimen/margin_1"
                />
            <com.ingencode.reciclaia.ui.components.InfoIconTextView
                android:id="@+id/terms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_1"
                app:layout_constraintTop_toBottomOf="@id/contact_us"
                app:iconSrcId="@drawable/round_menu_book_24"
                android:backgroundTint="?attr/colorPrimary"
                app:label="@string/terms_and_conditions"
                app:isSeparatorVisible="true"
                android:foreground="?attr/selectableItemBackground"
                android:paddingHorizontal="@dimen/margin_1"
                />
            <com.ingencode.reciclaia.ui.components.InfoIconTextView
                android:id="@+id/privacy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_1"
                app:layout_constraintTop_toBottomOf="@id/terms"
                app:iconSrcId="@drawable/round_shield_24"
                android:backgroundTint="?attr/colorPrimary"
                app:label="@string/privacy_policy"
                app:isSeparatorVisible="true"
                android:foreground="?attr/selectableItemBackground"
                android:paddingHorizontal="@dimen/margin_1"
                />
            <com.ingencode.reciclaia.ui.components.InfoIconTextView
                android:id="@+id/rate_us"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_1"
                app:layout_constraintTop_toBottomOf="@id/privacy"
                app:iconSrcId="@drawable/round_star_rate_24"
                android:backgroundTint="?attr/colorPrimary"
                app:label="@string/rate_us"
                app:isSeparatorVisible="false"
                android:foreground="?attr/selectableItemBackground"
                android:paddingHorizontal="@dimen/margin_1"
                />
            <androidx.compose.ui.platform.ComposeView
                android:id="@+id/compose_view"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
